--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <link href="./CSS/styleaccueil.css" rel="stylesheet">
+    <link href="./CSS/style_index.css" rel="stylesheet">
 </head>
 <body>
     <head>
-
-    </head>
-    <article>
         <div>
             <h1>Cap sur Paris 2024 :</h1>
             <h3>La voile aux jeux</h3>
         </div>
+    </head>
+    <article>
+        
     </article>
     <footer>
 
