--- a/statistique.html
+++ b/statistique.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>statistique</title>
 </head>
 <body>
-    
+    <header></header>
+    <p>vefd</p>
+    <div id="deuxième_bloc"></div>
+    <p>loree</p>
+    <div id="quatrième_bloc"></div>
+    <footer></footer>
 </body>
 </html>
