--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link href="./CSS/style_index.css" rel="stylesheet">
 </head>
 <body>
-    <head>
-        <div>
-            <h1>Cap sur Paris 2024 :</h1>
-            <h3>La voile aux jeux</h3>
-        </div>
-    </head>
+    <header>
+        
+    </header>
+    <div>
+        <h1>Cap sur Paris 2024 :</h1>
+        <h3>La voile aux jeux</h3>
+    </div>
     <article>
         
     </article>
