--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        
+        <div>
+            <img id="grand_logo" src="./images/Logo_voile_paris2024.svg">
+        </div>
     </header>
-    <div>
+    <div id="main">
         <h1>Cap sur Paris 2024 :</h1>
         <h3>La voile aux jeux</h3>
     </div>
