--- a/biographie.html
+++ b/biographie.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biographies</title>
+    <link href="./CSS/style_biographie.css" rel="stylesheet">
 </head>
 <header>
-    
+
 </header>
 <body>
-    
+    <div id="intro">Charline Picon, Jean-Baptiste Bernaz et Lauriane Nolot incarnent l’élite de la voile française. Passion, discipline et audace rythment leurs carrières, marquées par des défis relevés avec panache sur les plus grandes compétitions internationales.</div>
+
+    <div class="fond"><div id="picon" class="skipper"><h3>Charline Picon</h3>
+    <div class="carte"><img src="images/charline_picon.jpg">
+    <p>Charline Picon commence la planche à voile à l'âge de 10 ans et rejoint l'équipe de France en 2006, à 20 ans. Lors de ses premiers Jeux Olympiques en 2012, elle termine à la 8ème place dans l'épreuve de RS:X femme. En 2014, à Santander, elle remporte la médaille d'or, exploit qu'elle réitère en 2016.<br>
+    Palmarès :<br>
+    - Jeux Olympiques : 1 or, 1 argent, 1 bronze<br>
+    - Championnats du monde : 2 or, 2 argent, 2 bronze<br>
+    - Championnats d'Europe : 5 or, 1 argent, 1 bronze</p></div></div></div>
+
+    <div class="fond"><div id="nolot" class="skipper"><h3>Laurianne Nolot</h3>
+    <div class="carte"><img src="images/laurianne_nolot.jpg">
+    <p>Laurianne Nolot commence le kitesurf à l'âge de 17 ans et apprend le kitefoil avec ses parents à 18 ans. Elle commence les compétitions à 19 ans. En 2021, à 23 ans, elle devient championne de France, vice-championne d'Europe et remporte une médaille de bronze au championnat du monde. En 2022, elle intègre l'équipe de France, devient championne d'Europe et vice-championne du monde. En 2023, elle remporte toutes ses compétitions.<br>
+    Palmarès :<br>
+    - Jeux Olympiques : 1 médaille d'argent<br>
+    - Championnats du monde : 2 or, 1 argent, 1 bronze<br>
+    - Championnats d'Europe : 2 or, 1 bronze<br>
+    - Championnats de France : 4 or, 1 bronze</p></div></div></div>
+
+    <div class="fond"><div id="bernaz" class="skipper"><h3>Jean-Baptiste Bernaz</h3>
+    <div class="carte"><img src="images/jean_baptiste.png">
+    <p>Jean-Baptiste Bernaz intègre l'équipe de France en 2006, à l'âge de 19 ans. Il participe à plusieurs Jeux Olympiques sans monter sur le podium. Cependant, il remporte la médaille d'or aux Jeux Méditerranéens en 2009 et 2022, ainsi que la médaille d'argent en 2013. En 2007, il termine deuxième au championnat d'Europe et devient champion du monde en 2017 et 2022.<br>
+    Palmarès :<br>
+    - Jeux Olympiques : 5e place comme meilleur classement<br>
+    - Championnats du monde : 1 or, 1 argent<br>
+    - Championnats d'Europe : 1 or, 2 argent<br>
+    - Jeux Méditérranéens : 2 or, 1 argent<br>
+    - Élu marin de l'année en 2022</p></div></div></div>
 </body>
 </html>
