--- a/statistique.html
+++ b/statistique.html
@@ -8,9 +8,16 @@
 <body>
     <header></header>
     <p>vefd</p>
-    <div id="deuxième_bloc"></div>
+    <div id="deuxième_bloc">
+        <img src="img/" alt=""/>
+        <p></p>
+    </div>
     <p>loree</p>
-    <div id="quatrième_bloc"></div>
+    <img src="img/" alt=""/>
+    <div id="quatrième_bloc">
+        <img src="img/" alt=""/>
+        <p></p>
+    </div>
     <footer></footer>
 </body>
 </html>
