--- a/statistique.html
+++ b/statistique.html
@@ -9,13 +9,13 @@
     <header></header>
     <p>vefd</p>
     <div id="deuxième_bloc">
-        <img src="img/" alt=""/>
+        <img src="img/Somme générée par la FFV depuis 2019.png" alt="revenu"/>
         <p></p>
     </div>
     <p>loree</p>
-    <img src="img/" alt=""/>
+    <img src="img/Nombre de clubs officiels de la FFV depuis 2019.png" alt="club"/>
     <div id="quatrième_bloc">
-        <img src="img/" alt=""/>
+        <img src="img/Nombre de licenciés par la FFV depuis 2019.png" alt="licence"/>
         <p></p>
     </div>
     <footer></footer>
