--- a/statistique.html
+++ b/statistique.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>statistique</title>
+    <link type="text/css" href="css/style_statistique.css" rel="stylesheet">
 </head>
 <body>
     <header></header>
     <p>vefd</p>
     <div id="deuxième_bloc">
-        <img src="img/Somme générée par la FFV depuis 2019.png" alt="revenu"/>
+        <img src="images/Somme_FFV.png" alt="revenu"/>
         <p></p>
     </div>
     <p>loree</p>
-    <img src="img/Nombre de clubs officiels de la FFV depuis 2019.png" alt="club"/>
+    <img src="images/club_FFV.png" alt="club"/>
     <div id="quatrième_bloc">
-        <img src="img/Nombre de licenciés par la FFV depuis 2019.png" alt="licence"/>
+        <img src="images/licence_FFV.png" alt="licence"/>
         <p></p>
     </div>
     <footer></footer>
