--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <link href="./CSS/style_index.css" rel="stylesheet">
+    <link type="" href="./CSS/style_index.css" rel="stylesheet">
 </head>
 <body>
     <header>
