--- a/statistique.html
+++ b/statistique.html
@@ -17,7 +17,7 @@
     <img src="images/club_FFV.png" alt="club"/>
     <div id="quatrième_bloc">
         <img src="images/licence_FFV.png" alt="licence"/>
-        <p></p>
+        <p>rgfd</p>
     </div>
     <footer></footer>
 </body>
