--- a/statistique.html
+++ b/statistique.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header></header>
-    <p>vefd</p>
+    <p>La FFV généré en 2019 122 000€ en 2020 cette somme à augmenter de 11 000€ ce qui l'éléve à 133 000€. En 2021 suite au covid et sécheresse cette somme baisse énormément et ateint les 120 00€, 2022 elle continue a baisser et atteient les 114 000. 2023 fut aussi une mauvaise anné car l'argent générer baisse encore de 9 000€ soit à 105 000€. heureusement en 2024 on a un pique d'augmentation et ateient à ouveaux les 119 000€ </p>
     <div id="deuxième_bloc">
         <img src="images/Somme_FFV.png" alt="revenu"/>
         <p></p>
