--- a/statistique.html
+++ b/statistique.html
@@ -9,7 +9,7 @@
 <body>
     <header></header>
     <article>
-        <p>les statistique de la FFV</p>
+        <p>A l'aide de cette page vous pourrez étudiez les statistique de la voile en France et de la FFV</p>
         <div id="deuxième_bloc">
             <img src="images/Somme_FFV.png" alt="revenu"/>
             <p>La FFV généré en 2019 122 000€ en 2020 cette somme à augmenter de 11 000€ ce qui l'éléve à 133 000€. En 2021 suite au covid et sécheresse cette somme baisse énormément et ateint les 120 00€, 2022 elle continue a baisser et atteient les 114 000. 2023 fut aussi une mauvaise anné car l'argent générer baisse encore de 9 000€ soit à 105 000€. heureusement en 2024 on a un pique d'augmentation et ateient à ouveaux les 119 000€ </p>
