--- a/classement.html
+++ b/classement.html
@@ -18,7 +18,7 @@
         <table>
             <thead>
               <tr>
-                <th>Skiff homme</th>
+                <th colspan="4">Skiff homme</th>
               </tr>
             </thead>
             <tbody>
@@ -28,19 +28,19 @@
                 <th>Noms</th>
                 <th>Points</th>
                </tr>
-              <tr>
+              <tr class="jaune fongris">
                 <td>1</td>
                 <td>Espagne</td>
                 <td>D.Botin le Chever,F.Tritte</td>
                 <td>70</td>
               </tr>
-              <tr>
+              <tr class="rbleu">
                 <td>2</td>
                 <td>Nouvelle-Zélande</td>
                 <td>I.McHardie,W.McKenzie</td>
                 <td>82</td>
               </tr>
-              <tr>
+              <tr class="rouge fongris">
                 <td>3</td>
                 <td>Etat-Unis</td>
                 <td>I.Barrows,H.Henken</td>
@@ -52,7 +52,7 @@
                 <td>R.Dickson,S.Waddilove</td>
                 <td>91</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>5</td>
                 <td>Pologne</td>
                 <td>D.Bucksack,S.Wierzbicki</td>
@@ -64,19 +64,19 @@
                 <td>B.Lambiex,F.Van de Werken</td>
                 <td>99</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>7</td>
                 <td>Grande-Bretagne</td>
                 <td>J.Peters,F.Sterrit</td>
                 <td>99</td>
               </tr>
-              <tr>
+              <tr class="bleu">
                 <td>8</td>
                 <td>Suisse</td>
                 <td>S.Schneiter,A. De Planta</td>
                 <td>104</td>
               </tr>
-              <tr>
+              <tr class="fongris">
                 <td>9</td>
                 <td>Croatie</td>
                 <td>S.Fantela,M.Fantela</td>
@@ -96,10 +96,10 @@
                 <br>
 
           <!-- Classement 2 -->
-         <table>
+          <table>
             <thead>
               <tr>
-                <th>Skiff femme</th>
+                <th colspan="4">Skiff femme</th>
               </tr>
             </thead>
             <tbody>
@@ -109,19 +109,19 @@
                 <th>Noms</th>
                 <th>Points</th>
                </tr>
-              <tr>
+              <tr class="jaune fongris">
                 <td>1</td>
                 <td>Pays-Bas</td>
                 <td>O.Van Aanholt, A.Duetz</td>
                 <td>74</td>
               </tr>
-              <tr>
+              <tr class="rbleu">
                 <td>2</td>
                 <td>Suède</td>
                 <td>V.Bobeck,R.Netzler</td>
                 <td>76</td>
               </tr>
-              <tr>
+              <tr class="rouge fongris">
                 <td>3</td>
                 <td>France</td>
                 <td>S.Steyaert,C.Picon</td>
@@ -172,11 +172,13 @@
             </tbody>
           </table>
 
+          <br>
+
           <!-- Classement 3 -->
          <table>
             <thead>
               <tr>
-                <th>Dériveur femme</th>
+                <th colspan="4">Dériveur femme</th>
               </tr>
             </thead>
             <tbody>
@@ -255,7 +257,7 @@
         <table>
             <thead>
               <tr>
-                <th>Dériveur homme</th>
+                <th colspan="4">Dériveur homme</th>
               </tr>
             </thead>
             <tbody>
@@ -334,7 +336,7 @@
         <table>
             <thead>
               <tr>
-                <th>Planche à voile femme</th>
+                <th colspan="4">Planche à voile femme</th>
               </tr>
             </thead>
             <tbody>
@@ -409,11 +411,11 @@
         
         <br>
 
-        <!-- Classement 5 -->
+        <!-- Classement 6 -->
         <table>
             <thead>
               <tr>
-                <th>Planche à voile homme</th>
+                <th colspan="4">Planche à voile homme</th>
               </tr>
             </thead>
             <tbody>
@@ -485,7 +487,325 @@
               </tr>
             </tbody>
         </table>
-           
+
+        <br>
+
+        <!-- Classement 7 -->
+        <table>
+          <thead>
+            <tr>
+              <th colspan="4">Kitesurf femme</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Classement</th>
+              <th>Pays</th>
+              <th>Noms</th>
+              <th>Points</th>
+             </tr>
+            <tr>
+              <td>1</td>
+              <td>Grande-Bretagne</td>
+              <td>E.Aldrige</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>France</td>
+              <td>L.Nolot</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Pays-Bas</td>
+              <td>A.Lammerts</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Etat-Unis</td>
+              <td>D.Moroz</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Suisse</td>
+              <td>E.Lengwiler</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td>Israel</td>
+              <td>G.Zuckerman</td>
+              <td>6</td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>Nouvelle-Zélande</td>
+              <td>B.Whitehead</td>
+              <td>7</td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>Allemagne</td>
+              <td>L.Meyer</td>
+              <td>8</td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td>Pologne</td>
+              <td>J.Damasiewicz</td>
+              <td>9</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>Italie</td>
+              <td>M.Pescotte</td>
+              <td>10</td>
+            </tr>
+          </tbody>
+      </table>
+
+      <br>
+
+      <!-- Classement 8 -->
+      <table>
+        <thead>
+          <tr>
+            <th colspan="4">Kitesurf homme</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>Classement</th>
+            <th>Pays</th>
+            <th>Noms</th>
+            <th>Points</th>
+           </tr>
+          <tr>
+            <td>1</td>
+            <td>Autriche</td>
+            <td>V.Bontus</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Slovénie</td>
+            <td>T.Vodisek</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Singapour</td>
+            <td>M.Maeder</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Italie</td>
+            <td>R.Pianoso</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Brésil</td>
+            <td>B.Lobo</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>France</td>
+            <td>A.Mazella</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Chine</td>
+            <td>Q.Huang</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>Allemagne</td>
+            <td>J.Maus</td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>Grande-Bretagne</td>
+            <td>C.Bainbridge</td>
+            <td>9</td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>Etat-Unis</td>
+            <td>M.Edegran</td>
+            <td>10</td>
+          </tr>
+        </tbody>
+    </table>
+
+    <br>
+
+       <!-- Classement 9 -->
+       <table>
+        <thead>
+          <tr>
+            <th colspan="4">Deriveur mixte</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>Classement</th>
+            <th>Pays</th>
+            <th>Noms</th>
+            <th>Points</th>
+           </tr>
+          <tr>
+            <td>1</td>
+            <td>Autriche</td>
+            <td>L.Vadlau,L.Maehr</td>
+            <td>38</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Japon</td>
+            <td>K.Okada,M.Yoshioka</td>
+            <td>41</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Suède</td>
+            <td>A.Dahlberg,L.Karlsson</td>
+            <td>47</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Espagne</td>
+            <td>J.Xammar Hernandez,N.Brugman Cabot</td>
+            <td>49</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Portugal</td>
+            <td>D.Costa,C.Joao</td>
+            <td>53</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>France</td>
+            <td>C.Lecointre,J.Mion</td>
+            <td>56</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Israel</td>
+            <td>N.Hasson,N.Lasry</td>
+            <td>67</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>Suisse</td>
+            <td>Y.Mermod,M,Siegenthaleur</td>
+            <td>68</td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>Australie</td>
+            <td>N.Jerwood,C.Nicholas</td>
+            <td>74</td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>Bresil</td>
+            <td>H.Duarte Haddad,I.Swan</td>
+            <td>84</td>
+          </tr>
+        </tbody>
+    </table>
+
+    <br>
+
+           <!-- Classement 10 -->
+           <table>
+            <thead>
+              <tr>
+                <th colspan="4">Multicoque mixte</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Classement</th>
+                <th>Pays</th>
+                <th>Noms</th>
+                <th>Points</th>
+               </tr>
+              <tr>
+                <td>1</td>
+                <td>Italie</td>
+                <td>R.Tita,M.Banti Marianna</td>
+                <td>51</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Argentine</td>
+                <td>M.Majdalani,E.Bosco</td>
+                <td>67</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Nouvelle-Zélande</td>
+                <td>M.Wilkinson,E.Dawson</td>
+                <td>80</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Grande-Bretagne</td>
+                <td>J.Gimson,A.Burnet</td>
+                <td>78(côté parcours)</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>France</td>
+                <td>T.Mourniac,L.Berthomieu</td>
+                <td>94</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>Pays-Bas</td>
+                <td>L.Van der Meer,B.Bouwer</td>
+                <td>98</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>Finlande</td>
+                <td>S.Kurtbay,A.Kerkinsen</td>
+                <td>112</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>Allemagne</td>
+                <td>P.Kohloff,A.Stuhlemmer</td>
+                <td>118</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>Brésil</td>
+                <td>J.Siemsen,M.Mariutti Arndt</td>
+                <td>129</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>Suède</td>
+                <td>E.Jarudd,H.Jonsson</td>
+                <td>136</td>
+              </tr>
+            </tbody>
+        </table>
+
+
+
     </body>
     <footer>
 
