--- a/statistique.html
+++ b/statistique.html
@@ -9,18 +9,20 @@
 <body>
     <header></header>
     <article>
-        <p>A l'aide de cette page vous pourrez étudiez les statistique de la voile en France et de la FFV</p>
+        <h3>A l'aide de cette page vous pourrez étudiez les statistique de la voile en France et de la FFV</h3>
         <div id="deuxième_bloc">
             <img src="images/Somme_FFV.png" alt="revenu"/>
             <p>La FFV généré en 2019 122 000€ en 2020 cette somme à augmenter de 11 000€ ce qui l'éléve à 133 000€. En 2021 suite au covid et sécheresse cette somme baisse énormément et ateint les 120 00€, 2022 elle continue a baisser et atteient les 114 000. 2023 fut aussi une mauvaise anné car l'argent générer baisse encore de 9 000€ soit à 105 000€. heureusement en 2024 on a un pique d'augmentation et ateient à ouveaux les 119 000€ </p>
         <br>
         </div>
-        <p>Le nombre de club de la FFV en 2019 s'élève à 1076 club, ce nombre augmentera jusqu'en 2021 en passant à 1082 et 2022 à 1091 club. Malheuresement ce nombre sera en constante baisse passant à 1088 club en 2022, 1080 club en 2023 et 1072 club en 2024</p>
-        <img src="images/club_FFV.png" alt="club"/>
-        <br>
+        <div id="troisième_bloc">
+            <h3>Le nombre de club de la FFV en 2019 s'élève à 1076 club, ce nombre augmentera jusqu'en 2021 en passant à 1082 et 2022 à 1091 club. Malheuresement ce nombre sera en constante baisse passant à 1088 club en 2022, 1080 club en 2023 et 1072 club en 2024</h3>
+            <img src="images/club_FFV.png" alt="club"/>
+            <br>
+        </div>
         <div id="quatrième_bloc">
             <img src="images/licence_FFV.png" alt="licence"/>
-            <p>Le nombre de licence vendu par la FFV est très variable depuis 2019 car en 2019 elle est de 280 000 puis en 2020 cette vente baisse énormént et atteint les 221 000 puis remonte jusqu'a 272 000 licence vendu en 2021. Ce nombre baisse légèrement en 2022 pour atteindre 262 000 il continue de baiser en 2023 et atteint les 220 000.lors de cette dernière anée le nombre de licence réaugmente subitement jusqu'à 258 000 </p>
+            <h3>Le nombre de licence vendu par la FFV est très variable depuis 2019 car en 2019 elle est de 280 000 puis en 2020 cette vente baisse énormént et atteint les 221 000 puis remonte jusqu'a 272 000 licence vendu en 2021. Ce nombre baisse légèrement en 2022 pour atteindre 262 000 il continue de baiser en 2023 et atteint les 220 000.lors de cette dernière anée le nombre de licence réaugmente subitement jusqu'à 258 000 </h3>
         </div>
     </article>
     <footer></footer>
