--- a/statistique.html
+++ b/statistique.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <header></header>
+    <nav id="nav_haut">
+        <ul>
+            <a href="./biographie.html"><div><p>Biographies</p></div></a>
+            <a href="./statistique.html"><div><p>La voile en France</p></div></a>
+            <a href="./classement.html"><div><p>Classement</p></div></a>
+            <a href="./sponsors.html"><div><p>Sponsors</p></div></a>
+        </ul>
+    </nav>
     <article>
         <h3>A l'aide de cette page vous pourrez étudiez les statistique de la voile en France et de la FFV</h3>
         <div id="deuxième_bloc">
