--- a/statistique.html
+++ b/statistique.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=2">
+    <meta name="viewport" content="width=device-width, initial-scale=3">
     <title>statistique</title>
     <link type="text/css" href="css/style_statistique.css" rel="stylesheet">
 </head>
