--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
             <h2>Edito</h2>
             <p>L'été dernier, avaient lieu les épruves des jeux olympiques de Paris, au travers desquels vous avez surement pu découvrir des sports tous plus spectaculaires et fascinants les uns que les autres.<br>Dans ce site web, nous vous proposons d'en apprendre plus sur ce sport magnifique et ancestrale qu'est la voile. Vous en apprendrez plus sur les sportifs, le fonctionnement des regates et le comptage des points mais aussi nous vous partagerons des données concernant le fonctionnement de la fédération française de voile ces dernieres années.</p>
         </div>
+        <div class="carousel">
+            <div class="group">
+                <div class="card">
+                    <img src="./images/jean_baptiste.png">
+                    <div><p>Biographie: Jean-Baptiste Bernaz</p></div>
+                </div>
+                <div class="card">
+                    <img src="./images/charline_picon.jpg">
+                    <div><p>Biographie: Charline Picon</p></div>
+                </div>
+                <div class="card">C</div>
+            </div>
+            <div aria-hidden class="group">
+                <div class="card">
+                    <img src="./images/jean_baptiste.png">
+                    <div><p>Biographie: Jean-Baptiste Bernaz</p></div>
+                </div>
+                <div class="card">
+                    <img src="./images/charline_picon.jpg">
+                    <div><p>Biographie: Charline Picon</p></div>
+                </div>
+              <div class="card">C</div>
+            </div>
+        </div>
     </article>
     <footer>
 
