--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@
                     <img src="./images/charline_picon.jpg">
                     <div><p>Biographie: Charline Picon</p></div>
                 </div>
-                <div class="card">C</div>
+                <div class="card">
+                    <img src="./images/laurianne_nolot.jpg">
+                    <div><p>Biographie: Laurianne Nolot</p></div>
+                </div>
+                <div class="card">
+                    <img id="optimist" src="./images/Optimist_plage.jpg">
+                    <div><p>Chiffres: Les licenciés des ecoles de voile françaises</p></div>
+                </div>
+                <div>
+                    <img src="" alt="">
+                </div>
             </div>
             <div aria-hidden class="group">
                 <div class="card">
@@ -53,7 +63,10 @@
                     <img src="./images/charline_picon.jpg">
                     <div><p>Biographie: Charline Picon</p></div>
                 </div>
-              <div class="card">C</div>
+                <div class="card">
+                    <img src="./images/laurianne_nolot.jpg">
+                    <div><p>Biographie: Laurianne Nolot</p></div>
+                </div>
             </div>
         </div>
     </article>
